Fix title spacing

--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .admin-title {
-  margin: 1rem 2rem;
+  margin: 1rem 2rem 0;
   display: flex;
   justify-content: space-between;
 
